<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView_AlcoolGasolina"
        android:layout_width="412dp"
        android:layout_height="127dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView_Texto"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/textoPrincipal"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_AlcoolGasolina"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_PrecoAlcool"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Texto">

        <EditText
            android:id="@+id/editText_PrecoAlcool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textPrecoAlcool"
            android:inputType="numberDecimal"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_PrecoGasolina"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_PrecoAlcool">

        <EditText
            android:id="@+id/editText_PrecoGaoslina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textPrecoGasolina"
            android:inputType="numberDecimal"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_Calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="calcularPreco"
        android:text="@string/btCalcular"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout_PrecoGasolina"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_PrecoGasolina" />

    <Button
        android:id="@+id/button_Zerar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="zerarValores"
        android:text="@string/btZerar"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout_PrecoGasolina"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_PrecoGasolina" />

</androidx.constraintlayout.widget.ConstraintLayout>